# gogh-mvp

./: .env  .gitignore  FILE_MANAGEMENT_IMPLEMENTATION.md  FIXES_APPLIED.md  INTEGRATION_COMPLETE.md  README.md  build-template.html  check-setup.js  command.html  components.bat  components.json  create.js  graph.html  jsconfig.json  main.js  mcp-tools.json  mode.html  package-lock.json  package.json  panel.html  preload-command.js  preload-graph.js  preload-panel.js  preload-settings.js  preload-sidebar.js  renderer-command.js  renderer-graph.js  renderer-mode.js  renderer-panel.js  renderer-settings.js  renderer-sidebar.js  reset-database.js  settings.html  sidebar.html  t.md  update-gemini-tasks.js  webpack.config.js
.claude/: settings.local.json
electron/: main.js  preload-command.js  preload-mode.js  preload-panel.js  preload-settings.js  preload-sidebar.js  preload.js
llm-server/: .env  Okay now research the repository and give the pyth.md  README.md  integration-example.js  package-lock.json  package.json  server.js  setup.bat  setup.sh
llm-server/python-mcp-backend/: .gitignore  FRONTEND_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  README.md  SETUP_GUIDE.md  agent_server.py  main.py  mcp_agent.config.yaml  pyproject.toml  rag_service.py  requirements.txt  setup.bat  setup.sh
llm-server/python-mcp-backend/workflows/: __init__.py  agentic_workflows.py
src/: Chat component that has thinking and other thigns.md  claude mcp AI cannot read files directly you need.md  index-command.jsx  index-graph.jsx  index-mode.jsx  index-panel.jsx  (+2 more)
(+27 files in other folders)
