[project]
name = "electron-mcp-backend"
version = "0.1.0"
description = "MCP Agent backend for Electron app with local Ollama"
requires-python = ">=3.10"
dependencies = [
    "mcp-agent>=0.0.21",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.0",
    "llama-index>=0.10.0",
    "llama-index-llms-ollama>=0.1.0",
    "llama-index-embeddings-ollama>=0.1.0",
    "llama-index-vector-stores-chroma>=0.1.0",
    "chromadb>=0.4.22",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "sentence-transformers>=2.3.0",
    "tiktoken>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
